--- a/seenema-frontend/src/Homepage/css/Homepage.css
+++ b/seenema-frontend/src/Homepage/css/Homepage.css
@@ -28,3 +28,27 @@
     margin-left: 14.5rem;
     height: 100%;
 }
+
+/* Style the default state of the scrollbar */
+.main-content-area::-webkit-scrollbar {
+    width: 7px; /* Width of the scrollbar */
+    height: 7px; /* Height of the scrollbar (for horizontal scrolling) */
+    background: transparent; /* Initially transparent scrollbar */
+}
+
+.main-content-area::-webkit-scrollbar-track {
+    background: transparent; /* Initially transparent track */
+}
+
+.main-content-area::-webkit-scrollbar-thumb {
+    background: transparent; /* Initially transparent thumb */
+    border-radius: 10px; /* Rounded corners for the thumb */
+}
+
+.main-content-area:hover::-webkit-scrollbar-thumb {
+    background-color: #9a999c; /* Replace with your desired color */
+}
+
+.main-content-area:hover::-webkit-scrollbar-track {
+    background-color: transparent; /* Replace with your desired color */
+}
